create form data mongo and create slug automatic

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,5 +1,6 @@
 <div class="mt-4">
 	<div class="row">
+		{{!-- #ech => loc qua array --}}
 		{{#each courses}}
 			<div class="col-sm-6 col-lg-4">
 				<div class="card mt-4">
