--- a/src/resources/views/courses/create.hbs
+++ b/src/resources/views/courses/create.hbs
@@ -15,12 +15,11 @@
 
 		<div class="form-group">
 			<label for="description">Mô tả khóa học</label>
-			<input
-				type="text"
+			<textarea
 				class="form-control"
 				name="description"
 				id="description"
-			/>
+			></textarea>
 		</div>
 
 		<div class="form-group">
