--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -18,11 +18,83 @@
 					<td>{{this.level}}</td>
 					<td>{{this.createAt}}</td>
 					<td>
-						<a href="/courses/{{this._id}}/edit" class="btn btn-link">Sửa</a>
-						<a href="" class="btn btn-link">Xóa</a>
+						<a
+							href="/courses/{{this._id}}/edit"
+							class="btn btn-link"
+						>Sửa</a>
+						<a
+							href=""
+							class="btn btn-link"
+							data-toggle="modal"
+							data-target="#delete-course-modal"
+							data-id="{{this._id}}"
+						>Xóa</a>
 					</td>
 				</tr>
 			{{/each}}
 		</tbody>
 	</table>
 </div>
+
+{{! Confirm delete course }}
+<div
+	class="modal fade"
+	id="delete-course-modal"
+	tabindex="-1"
+	role="dialog"
+	aria-labelledby="exampleModalLabel"
+	aria-hidden="true"
+>
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Xóa khóa học</h5>
+				<button
+					type="button"
+					class="close"
+					data-dismiss="modal"
+					aria-label="Close"
+				>
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				Vui lòng xác nhận bạn muốn xóa khóa học này!
+			</div>
+			<div class="modal-footer">
+				<button
+					type="button"
+					class="btn btn-secondary"
+					data-dismiss="modal"
+				>Hủy</button>
+					<button
+					type="button"
+					class="btn btn-danger"
+					data-dismiss="modal"
+					id="btn-delete-course"
+				>Xóa bỏ</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+{{!-- Delete hidden form --}}
+	<form method="POST" name="delete-course-form">
+	</form>
+
+<script>
+	document.addEventListener('DOMContentLoaded', function() {
+		// When dialog confirm clicked.
+		$('#delete-course-modal').on('show.bs.modal', function (event) {
+			var button = $(event.relatedTarget) 
+			var courseId = button.data('id')
+			var btnDeleteCourse = document.getElementById('btn-delete-course');
+			var deleteForm = document.forms['delete-course-form']
+			btnDeleteCourse.onclick = function () {
+				deleteForm.action = `/courses/${courseId}?_method=DELETE`;
+				deleteForm.submit()
+			}	
+		});
+	});
+
+</script>
